testsuite/tests/deriving/should_fail/T12801.stderr

T12801.hs:8:17: error:
    • Can't make a derived instance of ‘Functor Wibble’:
        You need DeriveFunctor to derive an instance for this class
    • In the data declaration for ‘Wibble’
